Bug 1657440 - avoid letting Skia query style information for Mac fonts. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D86492